finished up prediction files

--- a/JupyterNotebooks/scratchpad.ipynb
+++ b/JupyterNotebooks/scratchpad.ipynb
@@ -33,6 +33,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 739,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_cols=['breed','date of last vet visit','hair length','height','number of vet visits','weight']\n",
+    "cats = pd.read_csv('../input/cats.csv')\n",
+    "cats = cats[predict_cols]\n",
+    "cats.to_csv('../input/cats_pred.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 744,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cats_preds = pd.read_csv('../output/cats.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 704,
    "metadata": {},
    "outputs": [
@@ -204,6 +225,127 @@
    ],
    "source": [
     "cats.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 745,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>breed</th>\n",
+       "      <th>date of last vet visit</th>\n",
+       "      <th>hair length</th>\n",
+       "      <th>height</th>\n",
+       "      <th>number of vet visits</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>age at death</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Siamese</td>\n",
+       "      <td>2009-08-02 14:02:18</td>\n",
+       "      <td>0.883886</td>\n",
+       "      <td>21.611951</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.103097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Siamese</td>\n",
+       "      <td>2013-11-27 19:08:52</td>\n",
+       "      <td>1.221535</td>\n",
+       "      <td>26.451956</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.134839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Manx</td>\n",
+       "      <td>2016-01-12 04:39:24</td>\n",
+       "      <td>0.967718</td>\n",
+       "      <td>18.540191</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.884093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Maine Coon</td>\n",
+       "      <td>2000-11-24 18:51:18</td>\n",
+       "      <td>1.090641</td>\n",
+       "      <td>16.564362</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.884621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Maine Coon</td>\n",
+       "      <td>2014-07-03 22:17:26</td>\n",
+       "      <td>1.004712</td>\n",
+       "      <td>22.535495</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.760926</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       breed date of last vet visit  hair length     height  \\\n",
+       "0           0     Siamese    2009-08-02 14:02:18     0.883886  21.611951   \n",
+       "1           1     Siamese    2013-11-27 19:08:52     1.221535  26.451956   \n",
+       "2           2        Manx    2016-01-12 04:39:24     0.967718  18.540191   \n",
+       "3           3  Maine Coon    2000-11-24 18:51:18     1.090641  16.564362   \n",
+       "4           4  Maine Coon    2014-07-03 22:17:26     1.004712  22.535495   \n",
+       "\n",
+       "   number of vet visits  weight  age at death  \n",
+       "0                     5     4.0      9.103097  \n",
+       "1                    10     4.0      9.134839  \n",
+       "2                    10     5.0      7.884093  \n",
+       "3                    12     7.0      7.884621  \n",
+       "4                     7     7.0      8.760926  "
+      ]
+     },
+     "execution_count": 745,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cats_preds.head()"
    ]
   },
   {
@@ -1583,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 740,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,6 +1735,210 @@
     "validmat = xgb.DMatrix(valid)\n",
     "\n",
     "valid_pred = clf.predict(validmat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 742,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid[\"preds\"] = valid_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 743,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>breed</th>\n",
+       "      <th>date of last vet visit</th>\n",
+       "      <th>hair length</th>\n",
+       "      <th>height</th>\n",
+       "      <th>number of vet visits</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>preds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.660194</td>\n",
+       "      <td>0.351852</td>\n",
+       "      <td>0.206103</td>\n",
+       "      <td>0.585676</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>9.034513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.351852</td>\n",
+       "      <td>0.518737</td>\n",
+       "      <td>0.641302</td>\n",
+       "      <td>0.3750</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>8.312065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.825243</td>\n",
+       "      <td>0.407407</td>\n",
+       "      <td>0.418926</td>\n",
+       "      <td>0.934948</td>\n",
+       "      <td>0.4375</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>7.641839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.825243</td>\n",
+       "      <td>0.370370</td>\n",
+       "      <td>0.785449</td>\n",
+       "      <td>0.540876</td>\n",
+       "      <td>0.7500</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>7.734291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.163430</td>\n",
+       "      <td>0.592593</td>\n",
+       "      <td>0.049400</td>\n",
+       "      <td>0.297925</td>\n",
+       "      <td>0.3750</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>9.539156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.825243</td>\n",
+       "      <td>0.314815</td>\n",
+       "      <td>0.759418</td>\n",
+       "      <td>0.319417</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>9.112435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.185185</td>\n",
+       "      <td>0.624515</td>\n",
+       "      <td>0.373390</td>\n",
+       "      <td>0.8125</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>7.404046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.163430</td>\n",
+       "      <td>0.537037</td>\n",
+       "      <td>0.497493</td>\n",
+       "      <td>0.929538</td>\n",
+       "      <td>0.4375</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>7.162603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.660194</td>\n",
+       "      <td>0.370370</td>\n",
+       "      <td>0.676040</td>\n",
+       "      <td>0.442214</td>\n",
+       "      <td>0.6875</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>8.842073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.660194</td>\n",
+       "      <td>0.462963</td>\n",
+       "      <td>0.770881</td>\n",
+       "      <td>0.796465</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>8.574995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      breed  date of last vet visit  hair length    height  \\\n",
+       "0  0.660194                0.351852     0.206103  0.585676   \n",
+       "1  1.000000                0.351852     0.518737  0.641302   \n",
+       "2  0.825243                0.407407     0.418926  0.934948   \n",
+       "3  0.825243                0.370370     0.785449  0.540876   \n",
+       "4  0.163430                0.592593     0.049400  0.297925   \n",
+       "5  0.825243                0.314815     0.759418  0.319417   \n",
+       "6  1.000000                0.185185     0.624515  0.373390   \n",
+       "7  0.163430                0.537037     0.497493  0.929538   \n",
+       "8  0.660194                0.370370     0.676040  0.442214   \n",
+       "9  0.660194                0.462963     0.770881  0.796465   \n",
+       "\n",
+       "   number of vet visits  weight     preds  \n",
+       "0                0.2500   0.500  9.034513  \n",
+       "1                0.3750   0.875  8.312065  \n",
+       "2                0.4375   0.250  7.641839  \n",
+       "3                0.7500   0.625  7.734291  \n",
+       "4                0.3750   0.875  9.539156  \n",
+       "5                0.2500   0.375  9.112435  \n",
+       "6                0.8125   0.375  7.404046  \n",
+       "7                0.4375   0.125  7.162603  \n",
+       "8                0.6875   0.500  8.842073  \n",
+       "9                0.2500   0.625  8.574995  "
+      ]
+     },
+     "execution_count": 743,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 741,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 741,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(valid_pred)"
    ]
   },
   {
