added unit tests for PreProcessing

--- a/JupyterNotebooks/scratchpad.ipynb
+++ b/JupyterNotebooks/scratchpad.ipynb
@@ -1980,6 +1980,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "Test cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "test = pd.DataFrame({'col1': [3, 4, 5, 2, 2], \n",
+    "              'datecol': [\"2009-08-02 14:02:18\", \"2009-08-02 14:02:18\", \"2009-08-02 14:02:18\", \"2009-08-02 14:02:18\",\"2009-08-02 14:02:18\"],\n",
+    "              'target': [1, 2, 2, 2, 2]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['col1', 'datecol', 'target'], dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
